Локальные тесты новые + правки